// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance flat 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1aqsr4g=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots appearance primary 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-k922kt=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots appearance secondary 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-es1dyb=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots appearance stroke 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-r0o8hq=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots as link default 1`] = `
<div
  data-css-claeju=""
>
  <a
    data-css-k922kt=""
    disabled={false}
    href="https://duckduckgo.com"
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Click as link
    </span>
  </a>
</div>
`;

exports[`Storyshots as link with icon 1`] = `
<div
  data-css-claeju=""
>
  <a
    data-css-1a9e67a=""
    disabled={false}
    href="https://duckduckgo.com"
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="pencil icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.2762 15.862L5 19l3.1392-.275 8.0858-8.0858-2.863-2.863-8.0858 8.0858zm12.363-6.637l.7668-.7667c.384-.3842.5922-.887.5922-1.4318 0-.5455-.208-1.048-.5932-1.4328-.3838-.3838-.885-.5912-1.4308-.5912-.5446 0-1.047.208-1.4318.5932l-.7662.7663 2.863 2.863zm-.665-6.2225c1.076 0 2.086.418 2.845 1.177.761.76 1.179 1.772 1.179 2.847 0 1.074-.418 2.086-1.178 2.846l-10.409 10.409c-.128.128-.289.22-.464.263l-4.705.427c-.34.085-.702-.015-.949-.264-.248-.247-.348-.608-.264-.949l.427-4.704c.044-.176.135-.336.263-.464l10.409-10.409c.76-.761 1.772-1.179 2.846-1.179z"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Click as link
    </span>
  </a>
</div>
`;

exports[`Storyshots disabled all 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "20px",
        "gridTemplateColumns": "1fr 1fr",
      }
    }
  >
    <button
      data-css-k922kt=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        primary
      </span>
    </button>
    <button
      data-css-6kyxwo=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        primary disabled
      </span>
    </button>
    <button
      data-css-es1dyb=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        secondary
      </span>
    </button>
    <button
      data-css-6kyxwo=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        secondary disabled
      </span>
    </button>
    <button
      data-css-r0o8hq=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        stroke
      </span>
    </button>
    <button
      data-css-h0v65m=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        stroke disabled
      </span>
    </button>
    <button
      data-css-1aqsr4g=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        flat
      </span>
    </button>
    <button
      data-css-sez2wa=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        flat disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots disabled with icon 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-12mp8l0=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="pencil icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.2762 15.862L5 19l3.1392-.275 8.0858-8.0858-2.863-2.863-8.0858 8.0858zm12.363-6.637l.7668-.7667c.384-.3842.5922-.887.5922-1.4318 0-.5455-.208-1.048-.5932-1.4328-.3838-.3838-.885-.5912-1.4308-.5912-.5446 0-1.047.208-1.4318.5932l-.7662.7663 2.863 2.863zm-.665-6.2225c1.076 0 2.086.418 2.845 1.177.761.76 1.179 1.772 1.179 2.847 0 1.074-.418 2.086-1.178 2.846l-10.409 10.409c-.128.128-.289.22-.464.263l-4.705.427c-.34.085-.702-.015-.949-.264-.248-.247-.348-.608-.264-.949l.427-4.704c.044-.176.135-.336.263-.464l10.409-10.409c.76-.761 1.772-1.179 2.846-1.179z"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots icon flat 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-4ytse=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon large 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-tr64zd=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon left 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1a9e67a=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon lone flat large 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1uflhsg=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat medium 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1kx4rjo=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat small 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-ovzx5r=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat xSmall 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-a9avat=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary large 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1uerbhn=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary medium 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1f8xqn2=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary small 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-10npvmr=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone primary xSmall 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-160sqgd=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone secondary large 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-hrkp4h=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone secondary medium 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-173swij=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone secondary small 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-148r3t3=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone secondary xSmall 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-rw27sk=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke large 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1rhqv24=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke medium 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-x66z0a=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke small 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-12tfgln=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke xSmall 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1thlmn5=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots icon medium 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1a9e67a=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon primary 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1a9e67a=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon right 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1cfdy3=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-8b1vtw=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon secondary 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-z42tj=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon small 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-maxmg4=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon stroke 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1fy7pxl=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon vertically aligned rows 1`] = `
<div
  data-css-claeju=""
>
  <div>
    <button
      data-css-1a9e67a=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-otejxm"
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        With icon
      </span>
    </button>
    <button
      data-css-k922kt=""
      disabled={false}
      style={Object {}}
    >
      <span
        data-css-15b13by=""
      >
        Without icon
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots icon xSmall 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1n89wkj=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots loading flat 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-bmauyp=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-1ec065u=""
        />
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading large 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-hyveox=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading lone icon 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-18lyjhy=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-y80vay=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-15b13by=""
    />
  </button>
</div>
`;

exports[`Storyshots loading medium 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1dvrrp9=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading no icon, hidden text 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-fjpk9m=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Text doesnt show when loading if no icon
    </span>
  </button>
</div>
`;

exports[`Storyshots loading primary 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-hyveox=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading secondary 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-bdy3nt=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-9pakmv=""
        />
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading small 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1gx4e6o=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading stroke 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-z4j01p=""
    disabled={true}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <span
          data-css-1jut5p0=""
        />
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots loading xSmall 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1mbtiih=""
    disabled={true}
    onClick={[Function]}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-12f5sv2"
      >
        <span
          data-css-10bxom6=""
        />
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Loading...
    </span>
  </button>
</div>
`;

exports[`Storyshots override styles with className 1`] = `
<div
  data-css-claeju=""
>
  <button
    className={
      Object {
        "data-css-jxpnuu": "",
      }
    }
    data-css-1a9e67a=""
    disabled={false}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Green Button
    </span>
  </button>
</div>
`;

exports[`Storyshots override styles with style 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1a9e67a=""
    disabled={false}
    style={
      Object {
        "background": "red",
      }
    }
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Red Button
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through anchor download 1`] = `
<div
  data-css-claeju=""
>
  <a
    data-css-k922kt=""
    disabled={false}
    download={true}
    href="/somewhere"
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Link with download
    </span>
  </a>
</div>
`;

exports[`Storyshots props pass through aria-expanded 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-expanded={true}
    data-css-k922kt=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      aria-expanded
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through button download 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-k922kt=""
    disabled={false}
    download={true}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Button with download
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through data-something 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-k922kt=""
    data-something="wow"
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Custom data attributes
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through not supported 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-k922kt=""
    disabled={false}
    onMouseOver={[Function]}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Should not mouseover
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through role 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-k922kt=""
    disabled={false}
    role="link"
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Role Link
    </span>
  </button>
</div>
`;

exports[`Storyshots props pass through title 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-k922kt=""
    disabled={false}
    style={Object {}}
    title="My caption"
  >
    <span
      data-css-15b13by=""
    >
      With title
    </span>
  </button>
</div>
`;

exports[`Storyshots size large 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-fjpk9m=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-k922kt=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1rsp5h9=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size xSmall 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-7zwe6r=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots with onClick clicks once 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-1a9e67a=""
    disabled={false}
    onClick={[Function]}
    style={Object {}}
  >
    <div
      data-css-1mgd019=""
    >
      <div
        className="css-otejxm"
      >
        <svg
          aria-label="check icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      data-css-15b13by=""
    >
      Clicks once
    </span>
  </button>
</div>
`;

exports[`Storyshots with ref ref to handle focus 1`] = `
<div
  data-css-claeju=""
>
  <button
    data-css-k922kt=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Should be focused
    </span>
  </button>
</div>
`;
